# next-basket-rec

./: .gitignore  g_p_top.ipynb  g_top.ipynb  metrics.py  p  preprocess.ipynb  preprocess.py  pyproject.toml  test.ipynb
methods/: g_top_k.py  helpers.py  p_top_k.py  pg_top_k.py
